--- a/.gitignore
+++ b/.gitignore
@@ -129,6 +129,10 @@ See https://help.github.com/articles/ignoring-files/ for more about ignoring fil
 env
 env/
 venv
+__pycache__/
+*/__pycache__/
+*/**/__pycache__/
+
 
 npm-debug.log*
 yarn-debug.log*
